[package]
authors = ["Huyu2239"]
edition = "2021"
name = "rust-practice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

serenity = {version = "0.10.9", features = ["framework", "standard_framework"]}

tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}
